2007-07-05  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs: (Visit::FieldReferenceExpression):
	Don't limit ourselves to just Fields and Properties. Fixes bug
	#81963.

2007-07-05  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs: Sanity check that both begin and end
	are != -1 to prevent a crash.
	(Visit): When adding a typeDeclaration to the list of references,
	don't add it using the StartLocation - instead, we need to find
	the actual reference offset using StartLocation as a hint. This
	fixes bug #82017.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* CSharpBindingCompilerManager.cs: added signing support.

2007-06-21  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Implemented support for additional
	  gac roots specified in packages.

2007-06-20  Jeffrey Stedfast  <fejj@gnome.org>

	Fixes a SmartIndenting bug reported by Latexer on IRC.

	* FormattingStrategy/CSharpIndentEngine.cs (PushOpenBrace): When
	inside a Case statement, only use nSpaces = -1 when we are either
	on the line where the case/default label was entered or if the
	first non-lwsp char is the '{', else use nSpaces = 0 so that we
	indent properly.

	* FormattingStrategy/CSharpIndentEngineStack.cs (Push): When
	pushing a new Block inside a Case, we can still add an indent
	level if nSpaces != -1.

2007-06-19  Mike Krueger  <mkrueger@novell.com> 

	Changed the C# file icon to look a bit more like gnome.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* Autotools/Autotools.mdp, CSharpBinding.mdp: Removed unused elements.

2007-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Added protection against infinite loop in
	  ResolveIdentifier. Fixes bug #81769.

2007-05-25  Jeffrey Stedfast  <fejj@gnome.org>

	* Parser/CodeGenerator.cs (EncapsulateFieldImpGetSet):
	Implemented.

2007-05-24  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/TypeVisitor.cs (Visit::IdentifierExpression): Scan parent